$Id$

TBD

* added format strings for dates and times
* fixed showservice.cgi so that it now requires only host names in the 
   servdb.conf file.
* made parsing and handling of *db.conf files more consistent
* added showgroup.cgi to display arbitrary groups of host/service/dataset.
   group definitions go in groupdb.conf.
* major overhaul of the javascript.  state is managed better now, and a lot
   of redundant code was removed.  there are more functions now, but the
   functions are more precise with fewer side effects.
* retain expanded/collapsed state of controls between reloads
* retain selection state of host, service, data set, and time periods
* added light/dark and green-tuple custom color palettes to config file
* fixed debugging controls in testcolor.cgi, showgraph.cgi, and show.cgi
* right-align text in the color tester
* updated the documentation: README, INSTALL, TODO
* new configuration options (see nagiosgraph.conf for details):
    showtitle
    showdesc
    showgraphtitle
    graphonly
    hidelegend
    hidengtitle
    lineformat
    plotasLINE1, plotasLINE2, plotasLINE3, plotasAREA, plotasTICK
    negate
    nagioscgiurl
    nagiosgraphcgiurl
    refresh
    geometries
    expand_timeall, expand_timehost, expand_timeservice, expand_timegroup
    timeformat_now
    timeformat_day, timeformat_week, timeformat_month
    timeformat_quarter, timeformat_year
    timegroup
* modified configuration options:
    'time' is now 'timeall'
    timeall, timehost, timeservice take comma-delimited lists
    'color' is now 'colors'
* deleted configuration options:
    nolabels
    graphlabels
    large
    small
* host and service are no longer required args.  just do the right thing.
* use the same controls layout for all cgi apps
* adjusted time period title layout
* added labels to time periods
* control on each time period to collapse/expand that period
* (partially) fixed prev/next controls
* default to collapsed state for controls