@@ -1,0 +1,14 @@
+# service options for nagiosgraph
+#
+# This file lists the default datasets that should be selected for each 
+# service.  This file is optional.  If no datasets are defined here for
+# a service, then all datasets for that service will be selected by default.
+#
+# The format for each line is:
+#
+# service=name&db=dataset0[&db=dataset1[&db=dataset2[...]]]
+#
+# These are examples.  Customize them to suit your configuration.
+
+service=mem&db=real,total&db=real,used&db=real,warn&db=real,crit
+service=net&db=data,byte-transmitted&db=data,byte-received
