@@ -11,7 +11,7 @@
 #
 # Each line has the following format:
 #
-# name=host,service[&db=dataset[&label=text][&db=dataset[&label=text][...]]]
+# name=host,service[&label=text][&db=dataset[&label=text]][...]
 #
 # If no datasets are specified, then include all datasets for the service.
 #
