@@ -6,7 +6,7 @@
 #
 # The format for each line is:
 #
-# service=name[&db=dataset[&label=text][&db=dataset[&label=text][...]]]
+# service=name[&label=text][&db=dataset[&label=text]][...]
 #
 # The labels apply to each corresponding dataset and override any global
 # labels defined in the nagiosgraph configuration file.
