@@ -25,6 +25,9 @@ servdb = /etc/nagiosgraph/servdb.conf
 # Location of showgroup control file
 groupdb = /etc/nagiosgraph/groupdb.conf
 
+# File containing data sets that should be selected in service queries.
+#datasetdb = /opt/nagiosgraph/etc/datasetdb.conf
+
 # Nagiosgraph CGI URL.
 nagiosgraphcgiurl = /nagiosgraph/cgi-bin
 
@@ -274,7 +277,7 @@ zoom = Size:
 testcolor = Show Colors
 typesome = Enter names separated by spaces
 
-## service abbreviations
+## labels for services
 apcupsd = Uninterruptible Power Supply Status
 bps = Bits Per Second
 clamdb = Clam Database
