@@ -17,6 +17,8 @@ body {
 h1 {
   font-size: 12pt;
   font-weight: bold;
+  clear: both;
+  padding-top: 1em;
 }
 .period_banner {
   clear: both;
